otarie it tables scripts and conf files added

--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -626,6 +626,57 @@ crontasks +=
     ]
   }
 
+//--###**************************************#####---
+//--###        CHARGEMENT OTARIE
+//--###**************************************#####---
+// Chargement de IT-CUSTOMER_SP_OTARIE
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_CUSTOMER_SP_OTARIE",
+    cron = "30 */20 * * * ?",
+    configFile = "/PROD/CONF/OTARIE/load-it-customer-sp-otarie.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "50 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+// Chargement de IT_TRAFFIC_CUST_CELL_OTARIE
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_TRAFFIC_CUST_CELL_OTARIE",
+    cron = "30 */20 * * * ?",
+    configFile = "/PROD/CONF/OTARIE/load-it-traffic-cust-cell-otarie.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "50 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+// Chargement de IT_TRAFFIC_CUST_OTARIE
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_TRAFFIC_CUST_OTARIE",
+    cron = "30 */20 * * * ?",
+    configFile = "/PROD/CONF/OTARIE/load-it-traffic-cust-otarie.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "50 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
 
 // Archivage des données IN_ZTE + LOGS NIFI
 crontasks +=
