CHanged topic-->consumer subscribes to temp topics for observations

--- a/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf
+++ b/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf
@@ -15,7 +15,7 @@ flux.output-type = "JDBC"
 flux.input-file-format = "CSV"
 
 flux.kafka.bootstrap-servers = "edge01.adcm.orangecm:6667,edge02.adcm.orangecm:6667"
-flux.kafka.subscribe = "ft-subscription"
+flux.kafka.subscribe = "tmp-ft-subscription"
 flux.kafka.security-protocol = "SASL_PLAINTEXT"
 flux.kafka.startingOffsets = "earliest"
 flux.kafka.maxOffsetsPerTrigger = 10
