Adjusted heap space

--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -27,7 +27,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "50 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -42,7 +42,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "50 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -57,7 +57,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "20 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -72,7 +72,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -88,7 +88,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -104,7 +104,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -120,7 +120,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -136,7 +136,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -151,7 +151,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -167,7 +167,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -183,7 +183,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -199,7 +199,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -220,7 +220,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -235,7 +235,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -253,7 +253,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "10 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -268,7 +268,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "10 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -283,7 +283,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "20 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -298,7 +298,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "20 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -313,7 +313,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "20 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -328,7 +328,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "25 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -343,7 +343,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "25 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -358,7 +358,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "25 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -374,7 +374,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "20 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -390,7 +390,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "20 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -409,7 +409,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -430,7 +430,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -446,7 +446,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -461,7 +461,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -481,7 +481,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -501,7 +501,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "20 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -515,7 +515,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "20 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -529,7 +529,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "20 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -543,7 +543,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "20 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -557,7 +557,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "20 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -571,7 +571,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "20 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -586,7 +586,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "50 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -602,7 +602,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "10 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -621,7 +621,7 @@ crontasks +=
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "50 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
@@ -688,7 +688,7 @@ crontasks +=
     taskLauncher = ${PIG_SCRIPT_LAUNCHER}
     timeout = "120 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xms256m -J-Xmx512m"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.PigScriptLauncher"}
     ]
   }
