Reverting to production topics

--- a/PROD/CONF/STREAMING/stream-calc-ft-01-subscription.conf
+++ b/PROD/CONF/STREAMING/stream-calc-ft-01-subscription.conf
@@ -21,7 +21,7 @@ flux.kafka.security-protocol = "SASL_PLAINTEXT"
 flux.kafka.startingOffsets = "earliest"
 flux.kafka.maxOffsetsPerTrigger = 10
 
-flux.kafka.output-topic = "tmp-ft-01-subscription"
+flux.kafka.output-topic = "ft-01-subscription"
 flux.kafka.key-expression = "CAST(TRANSACTION_DATE AS STRING) AS key"
 flux.kafka.value-expression = "CAST(VALUE AS STRING) AS value"
 
