--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -138,3 +138,18 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
     ]
   }
+
+// // EXPORT FT_QOS_SMSC_SPECIAL_NUMBER
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_FT_QOS_SMSC_SPECIAL",
+    cron = "0 30 */4 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-ft-qos-smsc-special-number.conf",
+    taskType = "SQOOP"
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "30 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+    ]
+  }
