--- a/PROD/CONF/MVAS/load-it-smsc-mvas-a2p.conf
+++ b/PROD/CONF/MVAS/load-it-smsc-mvas-a2p.conf
@@ -12,7 +12,7 @@ flux.hdfs.dest-temp-tt-dir = "/PROD/TT/MVAS/MVAS_DATA/"
 flux.hdfs.move-to-arch = true
 flux.hdfs.src-arch-dir-regex = "/PROD/TT/MVAS/MVAS_DATA/*"
 flux.hdfs.dest.arch-dir = "/PROD/ARCH/MVAS/"
-flux.hdfs.dest.has-sub-dir = false
+flux.hdfs.dest.has-sub-dir = true
 flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
 flux.has-pre-queries = false
