--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -13,6 +13,8 @@ SQOOP_LAUNCHER="/bin/sh"
 
 env = "prod"
 
+cronmanagerId = "001"
+
 /////////////////////////////////////////////////////
 //                   CDR IN                        //
 ////////////////////////////////////////////////////
