--- a/PROD/CONF/streaming-cron-tasks.conf
+++ b/PROD/CONF/streaming-cron-tasks.conf
@@ -12,6 +12,8 @@ SQOOP_LAUNCHER="/bin/sh"
 
 env = "prod"
 
+cronmanagerId = "003"
+
 //--###**************************************#####---
 //--###        CALCUL FT IN
 //--###**************************************#####---
