--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -13,6 +13,8 @@ SQOOP_LAUNCHER="/bin/sh"
 
 env = "prod"
 
+cronmanagerId = "002"
+
 //--###**************************************#####---
 //--###        CHARGEMENT FT IN
 //--###**************************************#####---
