update export-fta-subs-conf and add -jt local param

--- a/PROD/CONF/SQOOP/sqoop-export-fta-subscription.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-subscription.conf
@@ -46,4 +46,6 @@ flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_A_SUBSCRIPTION_STAGING"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_A_SUBSCRIPTION"
 flux.sqoop.export-hive.staging-table = "FT_A_SUBSCRIPTION_STAGE"
 flux.sqoop.export-hive.staging-table-database = "DEFAULT"
+flux.sqoop.extra-params += "-jt local"
+
 
