sqoop export configuration

--- a/PROD/CONF/SQOOP/sqoop-export-ft-global-activity-daily.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-global-activity-daily.conf
@@ -42,7 +42,8 @@ flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
 flux.sqoop.query = "SELECT COMMERCIAL_OFFER_CODE, TRANSACTION_TYPE, SUB_ACCOUNT, TRANSACTION_SIGN, SOURCE_PLATFORM, SOURCE_DATA, SERVED_SERVICE, SERVICE_CODE, DESTINATION, OTHER_PARTY_ZONE, MEASUREMENT_UNIT, RATED_COUNT, RATED_VOLUME, TAXED_AMOUNT, UNTAXED_AMOUNT, INSERT_DATE , TRAFFIC_MEAN, OPERATOR_CODE, TRANSACTION_DATE FROM REPORT.FT_GLOBAL_ACTIVITY_DAILY WHERE TRANSACTION_DATE='###SLICE_VALUE###'"
 
-flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_GLOBAL_ATV_DAILY_STAGING"
+flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_GLOBAL_ATV_DAILY"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_GLOBAL_ACTIVITY_DAILY"
-flux.sqoop.export-hive.staging-table = "FT_GLOBAL_ACTIVITY_DAILY_STAGE"
+flux.sqoop.export-hive.staging-table = "SQ_TMP_GLOBAL_ACTIVITY_DAILY"
 flux.sqoop.export-hive.staging-table-database = "REPORT"
+flux.sqoop.extra-params += "-jt local"
