--- a/PROD/CONF/SQOOP/sqoop-export-ft-gsm-traffic-revenue-post.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-gsm-traffic-revenue-post.conf
@@ -42,9 +42,10 @@ flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
 flux.sqoop.query = "SELECT TRANSACTION_DATE,TRANSACTION_HOUR ,OFFER_PROFILE_CODE,SERVICE_CODE ,DESTINATION,CALL_DESTINATION_CODE,OTHER_PARTY_ZONE,SPECIFIC_TARIFF_INDICATOR,CITYZONE_NUMBER,TVA,TOTAL_COUNT,RATED_TOTAL_COUNT,DURATION,RATED_DURATION,MAIN_RATED_AMOUNT,PROMO_RATED_AMOUNT,RATED_AMOUNT,MAIN_DISCARDED_CREDIT,PROMO_DISCARDED_CREDIT,SMS_DISCARDED_VOLUME ,SMS_USED_VOLUME,SOURCE_PLATFORM,SOURCE_DATA,INSERT_DATE,SUB_SERVICE,SERVED_SERVICE ,OTHER_PARTY_PRESENT,CREDIT_AMOUNT ,DEBIT_AMOUNT,TARIFF_PLAN,PROMO_RATED_AMOUNT_PROMO,PROMO_RATED_AMOUNT_ONNET,PROMO_RATED_AMOUNT_XPRESS,RATED_AMOUNT_DETAILS,OPERATOR_CODE,TIME_USED_VOLUME ,BUNDLE_SMS_USED_VOLUME FROM MON.FT_GSM_TRAFFIC_REVENUE_POST WHERE TRANSACTION_DATE='###SLICE_VALUE###'"
 
-flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_GSM_TF_REV_POST_STAGING"
+flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_GSM_TF_REV_POST"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_GSM_TRAFFIC_REVENUE_POST"
-flux.sqoop.export-hive.staging-table = "FT_GSM_TRAFFIC_REVENUE_POST_STAGE"
+flux.sqoop.export-hive.staging-table = "SQ_TMP_GSM_TF_REV_POST"
 flux.sqoop.export-hive.staging-table-database = "DEFAULT"
+flux.sqoop.extra-params += "-jt local"
 
 
