--- a/PROD/CONF/SQOOP/sqoop-export-ft-qos-smsc-special-number.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-qos-smsc-special-number.conf
@@ -42,8 +42,8 @@ flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
 flux.sqoop.query = "SELECT TRANSACTION_DATE, TRANSACTION_TIME,CONTRACT_TYPE ,OPERATOR_CODE ,MAIN_USAGE_SERVICE_CODE ,COMMERCIAL_OFFER ,PREVIOUS_COMMERCIAL_OFFER,SUBS_SERVICE ,SUBS_BENEFIT_NAME ,SUBS_CHANNEL ,SUBS_RELATED_SERVICE ,SUBS_TOTAL_COUNT,SUBS_AMOUNT ,SOURCE_PLATFORM ,SOURCE_DATA ,INSERT_DATE ,SERVICE_CODE ,MSISDN_COUNT ,SUBS_EVENT_RATED_COUNT ,SUBS_PRICE_UNIT FROM MON.FT_A_SUBSCRIPTION WHERE TRANSACTION_DATE='###SLICE_VALUE###'"
 
-flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_A_SUBSCRIPTION"
-flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_A_SUBSCRIPTION"
+flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_QS_SMSC_SPEC_NUM"
+flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_QS_SMSC_SPEC_NUM"
 flux.sqoop.export-hive.staging-table = "SQ_TMP_A_SUBSCRIPTION"
 flux.sqoop.export-hive.staging-table-database = "DEFAULT"
 flux.sqoop.extra-params += "-jt local"
