--- a/PROD/CONF/SQOOP/sqoop-export-fta-data-transfer.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-data-transfer.conf
@@ -41,8 +41,10 @@ flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
 flux.sqoop.query = "SELECT EVENT_DATE ,NB_TRANSFERS ,BYTES_DEBITED ,BYTES_CREDITED ,MONTANT_FRAIS ,BUNDLE ,NB_DISTINCT_DAILY_SENDERS ,NB_DISTINCT_DAILY_RECEIVERS ,NB_DISTINCT_DAILY_USERS ,SENDER_OPERATOR_CODE ,RECEIVER_OPERATOR_CODE ,SENDER_OFFER_PROFILE_CODE ,RECEIVER_OFFER_PROFILE_CODE ,INSERT_DATE FROM MON.FT_A_DATA_TRANSFER WHERE EVENT_DATE='###SLICE_VALUE###'"
 
-flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_A_DATA_TRANSFER_STAGING"
+flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_A_DATA_TRANSFER"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_A_DATA_TRANSFER"
-flux.sqoop.export-hive.staging-table = "FT_A_DATA_TRANSFER_STAGE"
+flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_A_DATA_TRANSFER"
 flux.sqoop.export-hive.staging-table-database = "DEFAULT"
+flux.sqoop.extra-params += "-jt local"
+
 
