--- a/PROD/CONF/SQOOP/sqoop-export-fta-gprs-activity.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-gprs-activity.conf
@@ -1,3 +1,4 @@
+ 
 //------******************************************************************
 //------********************* EXPORT FTA TO DWH ********************** 
 //------ ARNOLD CHUENFFO 15-02-2019 ----------------------------------
@@ -6,7 +7,7 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "SQ_EXPORT_FT_A_GPRS_ACTIVITY_POST"
+flux.name = "SQ_EXPORT_FT_A_GPRS_ACTIVITY"
 
 flux.type = "EXPORT"
 
@@ -26,11 +27,11 @@ flux.hive.has-pre-queries = true
 
 flux.rdms.pre-exec-queries += """
 SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
-(SELECT COUNT(*) NBR FROM MON.SQ_FT_A_GPRS_ACTIVITY_POST WHERE DATECODE = TO_DATE('###SLICE_VALUE###', 'YYYY-MM-DD'))
+(SELECT COUNT(*) NBR FROM MON.SQ_FT_A_GPRS_ACTIVITY WHERE DATECODE = TO_DATE('###SLICE_VALUE###', 'YYYY-MM-DD'))
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1000, 'OK', 'NOK') FROM
-(SELECT COUNT(*) NBR FROM MON.FT_A_GPRS_ACTIVITY_POST WHERE DATECODE='###SLICE_VALUE###') A
+(SELECT COUNT(*) NBR FROM MON.FT_A_GPRS_ACTIVITY WHERE DATECODE='###SLICE_VALUE###') A
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.75.133)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
@@ -38,9 +39,11 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT DATECODE, TIMECODE,COMMERCIAL_OFFER,SERVICE_CLASS,TRANSACTION_TYPE ,MEASUREMENT_UNIT,BYTES_RECV,BYTES_SEND,TOTAL_COST,BUCKET_VALUE,TOTAL_DURATION,BILLED_DURATION,TOTAL_COUNT ,BILLED_COUNT,TOTAL_UNIT,BILLED_UNIT,OPERATOR_CODE,LOCATION_LAC,LOCATION_CI,SERVICE_CATEGORY,ROAMING_INDICATOR,SERVED_PARTY_PRICE_PLAN,SERVICE_TYPE,CONTENT_PROVIDER,MAIN_COST,PROMO_COST,SERVICE_NAME,GPP_USER_LOCATION_INFO,INSERT_DATE FROM MON.FT_A_GPRS_ACTIVITY_POST WHERE DATECODE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT DATECODE ,TIMECODE ,COMMERCIAL_OFFER ,SERVICE_CLASS ,TRANSACTION_TYPE ,MEASUREMENT_UNIT ,BYTES_RECV ,BYTES_SEND , TOTAL_COST ,BUCKET_VALUE ,TOTAL_DURATION ,BILLED_DURATION ,TOTAL_COUNT ,BILLED_COUNT ,TOTAL_UNIT ,BILLED_UNIT ,OPERATOR_CODE ,SERVICE_CATEGORY ,ROAMING_INDICATOR ,SERVED_PARTY_PRICE_PLAN ,SERVICE_TYPE ,CONTENT_PROVIDER ,MAIN_COST ,PROMO_COST ,SERVICE_NAME ,SERVICE_NAME_DETAIL ,INSERT_DATE FROM MON.FT_A_GPRS_ACTIVITY WHERE DATECODE='###SLICE_VALUE###'"
 
-flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_A_GPRS_ATV_POST_STAGING"
-flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_A_GPRS_ACTIVITY_POST"
-flux.sqoop.export-hive.staging-table = "FT_A_GPRS_ACTIVITY_POST_STAGE"
+flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_A_GPRS_ACTIVITY"
+flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_A_GPRS_ACTIVITY"
+flux.sqoop.export-hive.staging-table = "SQ_TMP_A_GPRS_ACTIVITY"
 flux.sqoop.export-hive.staging-table-database = "DEFAULT"
+flux.sqoop.extra-params += "-jt local"
+
