--- a/PROD/CONF/SQOOP/sqoop-export-ft-x-interco-final.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-x-interco-final.conf
@@ -44,6 +44,7 @@ flux.sqoop.query = "SELECT SRC,CRA_SRC,HEURE,FAISCEAU,USAGE_APPEL,INDICATION_APP
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_X_INTERCO_FINAL"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_X_INTERCO_FINAL"
-flux.sqoop.export-hive.staging-table = "SQ_TMP_X_INTERCO_FINAL"
+flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_X_INTERCO_FINAL"
 flux.sqoop.export-hive.staging-table-database = "DEFAULT"
+flux.sqoop.extra-params += "-jt local"
 
