--- a/PROD/CONF/SQOOP/sqoop-export-fta-gprs-activity.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-gprs-activity.conf
@@ -43,7 +43,7 @@ flux.sqoop.query = "SELECT DATECODE ,TIMECODE ,COMMERCIAL_OFFER ,SERVICE_CLASS ,
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_A_GPRS_ACTIVITY"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_A_GPRS_ACTIVITY"
-flux.sqoop.export-hive.staging-table = "SQ_TMP_A_GPRS_ACTIVITY"
+flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_A_GPRS_ACTIVITY"
 flux.sqoop.export-hive.staging-table-database = "DEFAULT"
 flux.sqoop.extra-params += "-jt local"
 
