--- a/PROD/CONF/SQOOP/sqoop-export-fta-subscription.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-subscription.conf
@@ -44,7 +44,7 @@ flux.sqoop.query = "SELECT TRANSACTION_DATE, TRANSACTION_TIME,CONTRACT_TYPE ,OPE
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_A_SUBSCRIPTION"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_A_SUBSCRIPTION"
-flux.sqoop.export-hive.staging-table = "SQ_TMP_A_SUBSCRIPTION"
+flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_A_SUBSCRIPTION"
 flux.sqoop.export-hive.staging-table-database = "DEFAULT"
 flux.sqoop.extra-params += "-jt local"
 
