--- a/PROD/CONF/SQOOP/sqoop-export-ft-gsm-traffic-revenue-post.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-gsm-traffic-revenue-post.conf
@@ -44,7 +44,7 @@ flux.sqoop.query = "SELECT TRANSACTION_DATE,TRANSACTION_HOUR ,OFFER_PROFILE_CODE
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_GSM_TF_REV_POST"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_GSM_TRAFFIC_REVENUE_POST"
-flux.sqoop.export-hive.staging-table = "SQ_TMP_GSM_TF_REV_POST"
+flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_GSM_TF_REV_POST"
 flux.sqoop.export-hive.staging-table-database = "DEFAULT"
 flux.sqoop.extra-params += "-jt local"
 
