otarie compute ft error fixed

--- a/PROD/CONF/OTARIE/FT/load-ft-otarie-data-traffic-day.conf
+++ b/PROD/CONF/OTARIE/FT/load-ft-otarie-data-traffic-day.conf
@@ -13,7 +13,7 @@ flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
 flux.slice-date-format = "yyyy-MM-dd"
 
-lux.has-pre-queries = true
+flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
