sqoop export configuration

--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -153,3 +153,19 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
     ]
   }
+
+
+// //  SQ_EXPORT_FT_GLOBAL_ACTIVITY_DAILY
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_FT_GLOBAL_ACTIVITY_DAILY",
+    cron = "0 30 */4 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-ft-global-activity-daily.conf",
+    taskType = "SQOOP"
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "30 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+    ]
+  }
