--- a/PROD/CONF/SQOOP/sqoop-export-fta-gprs-activity-post.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-gprs-activity-post.conf
@@ -38,7 +38,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT DATECODE, TIMECODE,COMMERCIAL_OFFER,SERVICE_CLASS,TRANSACTION_TYPE ,MEASUREMENT_UNIT,BYTES_RECV,BYTES_SEND,TOTAL_COST,BUCKET_VALUE,TOTAL_DURATION,BILLED_DURATION,TOTAL_COUNT ,BILLED_COUNT,TOTAL_UNIT,BILLED_UNIT,OPERATOR_CODE,LOCATION_LAC,LOCATION_CI,SERVICE_CATEGORY,ROAMING_INDICATOR,SERVED_PARTY_PRICE_PLAN,SERVICE_TYPE,CONTENT_PROVIDER,MAIN_COST,PROMO_COST,SERVICE_NAME,GPP_USER_LOCATION_INFO,INSERT_DATE FROM MON.FT_A_GPRS_ACTIVITY_POST WHERE DATECODE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT * FROM MON.FT_A_GPRS_ACTIVITY_POST WHERE DATECODE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_A_GPRS_ACTIVITY_POST"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_A_GPRS_ACTIVITY_POST"
