--- a/PROD/CONF/SQOOP/sqoop-export-ft-qos-smsc-special-number.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-qos-smsc-special-number.conf
@@ -37,7 +37,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT SRC_TABLE, SRC_NUM, DEST_NUM, ENTRY_DATE, SM_STATE, DEST_OPERATOR, SRC_OPERATOR, SRC_MSC_OPERATOR, DEST_MSC_OPERATOR, SRC_EI_TYPE, DEST_EI_TYPE, NOTIF_IND, DELIVERY_SLICEID, CRA_COUNT, INSERT_DATE, BILLS_PLATFORM, SRC_EI, DEST_EI, BILL_DATE, STATE_DATE FROM MON.FT_QOS_SMSC_SPECIAL_NUMBER WHERE STATE_DATE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT SRC_TABLE, SRC_NUM, DEST_NUM, STATE_DATE, ENTRY_DATE, SM_STATE, DEST_OPERATOR, SRC_OPERATOR, SRC_MSC_OPERATOR, DEST_MSC_OPERATOR, SRC_EI_TYPE, DEST_EI_TYPE, NOTIF_IND, DELIVERY_SLICEID, CRA_COUNT, INSERT_DATE, BILLS_PLATFORM, SRC_EI, DEST_EI, BILL_DATE FROM MON.FT_QOS_SMSC_SPECIAL_NUMBER WHERE STATE_DATE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_QS_SMSC_SPEC_NUM"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_QOS_SMSC_SPECIAL_NUMBER"
