parallel-size set at 5 for analyze compute and arch conf files

--- a/PROD/CONF/analyze_compute_statistics.conf
+++ b/PROD/CONF/analyze_compute_statistics.conf
@@ -17,6 +17,8 @@ flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.parallel-size = 5
+
 flux.exec-query.execution.mode = "JDBC"
 
 flux.inline.exec-queries += "ANALYZE TABLE CDR.IT_ZTE_ACCT_EXTRACT PARTITION(ORIGINAL_FILE_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
