--- a/PROD/CONF/PIG/pig-compress-zte-data.conf
+++ b/PROD/CONF/PIG/pig-compress-zte-data.conf
@@ -56,4 +56,5 @@ flux.source-dirs+="/PROD/ARCH/ZEBRA/ZEBRA_TRANSAC/"
 flux.dirs-not-to-archive-name-content="compressed"
 flux.min-last-modification-secs=604800
 flux.pig.script="hdfs://ocmhdp/PROD/SCRIPTS/COMPRESSION/compress.pig"
+flux.parallel-size = 5
 
