prequery edited-all FT tables

--- a/PROD/CONF/SQOOP/sqoop-export-ft-global-activity-daily.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-global-activity-daily.conf
@@ -1,14 +1,14 @@
 //-- ---********************************************************---
 //---------EXPORT FT_GLOBAL ACTIVITY-------------------
 //-------- ARNOLD CHUENFFO 10-04-2019
-//------- export data to Datawarehouse
+//------- export data to Datawarehouse edited
 //---***********************************************************---
 
 
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "SQ_EXPORT_FT_GLOBAL_ACTIVITY_DAILY"
+flux.name = "SQ_EXPORT_Fcd /opt/app/git/hdfs-prod-bk && git checkout masterT_GLOBAL_ACTIVITY_DAILY"
 
 flux.type = "EXPORT"
 
