--- a/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-edr-prpd-eqt.conf
+++ b/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-edr-prpd-eqt.conf
@@ -23,6 +23,7 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EQUATION_PREPAYEE/prequery_ft_
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EQUATION_PREPAYEE/prequery_completude_prpd_eqt.hql"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EQUATION_PREPAYEE/compute_and_insert_into_ft_edr_prpd_eqt.hql"
+flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
@@ -30,3 +31,9 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
 //Prequery variables
 flux.hive.extra-conf += "--hivevar date_offset=20"
+
+flux.hive.extra-conf += "--hivevar table_type=FT"
+flux.hive.extra-conf += "--hivevar table_name=FT_A_EDR_PRPD_EQT"
+flux.hive.extra-conf += "--hivevar insert_date_column=INSERT_DATE"
+flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_A_EDR_PRPD_EQT"
+flux.hive.extra-conf += "--hivevar table_partition=EVENT_DATE"
