modified collect and compute cron tasks files for better tasks distribution

--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -27,7 +27,7 @@ crontasks +=
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-data.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "50 minutes"
+    timeout = "9 minutes"
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
@@ -42,7 +42,7 @@ crontasks +=
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-voice_sms.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "50 minutes"
+    timeout = "9 minutes"
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
@@ -57,7 +57,7 @@ crontasks +=
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-subscription.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "20 minutes"
+    timeout = "19 minutes"
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx1024m"}
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
@@ -68,7 +68,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ADJUSTMENT",
-    cron = "0 */10 * * * ?",
+    cron = "0 5-59/10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-adjustment.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -100,7 +100,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_DATA_POST",
-    cron = "0 */10 * * * ?",
+    cron = "0 5-59/10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-data-post.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -132,7 +132,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_EMERGENCY_DATA",
-    cron = "0 */10 * * * ?",
+    cron = "0 5-59/10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-emergency-data.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -163,7 +163,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_RECHARGE",
-    cron = "0 */10 * * * ?",
+    cron = "0 5-59/10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-recharge.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -194,7 +194,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_VOICE_SMS_POST",
-    cron = "0 */10 * * * ?",
+    cron = "0 5-59/10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-voice_sms_post.conf",
     taskType = "HIVE"
 
@@ -231,7 +231,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_CHECK_FILE_ALL",
-    cron = "0 */10 * * * ?",
+    cron = "0 5-59/10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-check_file_all.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -264,7 +264,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_PRICE_PLAN_EXTRACT",
-    cron = "55 */30 * * * ?",
+    cron = "55 5-59/30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-price-plan-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -279,7 +279,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_ACC_NBR_EXTRACT",
-    cron = "55 */30 * * * ?",
+    cron = "55 10-59/30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-acc-nbr-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -294,7 +294,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_ACCT_EXTRACT",
-    cron = "55 */30 * * * ?",
+    cron = "55 15-59/30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-acct-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -309,7 +309,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_BAL_EXTRACT",
-    cron = "55 */30 * * * ?",
+    cron = "55 20-59/30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-bal-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -324,7 +324,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_CUST_EXTRACT",
-    cron = "55 */30 * * * ?",
+    cron = "55 25-59/30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-cust-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -354,7 +354,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_SUBS_EXTRACT",
-    cron = "55 */30 * * * ?",
+    cron = "55 5-59/30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-subs-extract.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -370,7 +370,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_BAL_SNAP",
-    cron = "55 */30 * * * ?",
+    cron = "55 10-59/30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-bal-snap.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -386,7 +386,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZTE_DEL_EXPBAL",
-    cron = "55 */30 * * * ?",
+    cron = "55 15-59/30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-del-expbal.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -426,7 +426,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZEBRA_CHECKFILE",
-    cron = "50 */15 * * * ?",
+    cron = "50 5-59/15 * * * ?",
     configFile = "/PROD/CONF/ZEBRA/IT/load-it-zebra-checkfile.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -442,7 +442,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_ZEBRA_MASTER",
-    cron = "50 */15 * * * ?",
+    cron = "50 10-59/15 * * * ?",
     configFile = "/PROD/CONF/ZEBRA/IT/load-it-zebra-master.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -511,7 +511,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_OM_APGL",
-    cron = "30 */30 * * * ?",
+    cron = "30 5-59/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-it-om-apgl.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -525,7 +525,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_OM_ALL_BALANCE",
-    cron = "30 */30 * * * ?",
+    cron = "30 10-59/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-it-om-all-balance.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -539,7 +539,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_OM_COMMISSIONS",
-    cron = "30 */30 * * * ?",
+    cron = "30 15-59/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-it-om-commissions.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -553,7 +553,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_OM_SERVICES_CHARGES",
-    cron = "30 */30 * * * ?",
+    cron = "30 20-59/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-it-om-services-charges.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -567,7 +567,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_OM_SUBSCRIBERS",
-    cron = "30 */30 * * * ?",
+    cron = "30 25-59/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-it-om-subscribers.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -583,7 +583,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_NIFI_LOGS",
-    cron = "0 */15 * * * ?",
+    cron = "0 5-59/15 * * * ?",
     configFile = "/PROD/CONF/NIFI_LOGS/load-it-log.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -621,7 +621,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_CUSTOMER_SP_OTARIE",
-    cron = "30 */20 * * * ?",
+    cron = "30 5-59/20 * * * ?",
     configFile = "/PROD/CONF/OTARIE/IT/load-it-customer-sp-otarie.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -637,7 +637,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_TRAFFIC_CUST_CELL_OTARIE",
-    cron = "30 */20 * * * ?",
+    cron = "30 10-59/20 * * * ?",
     configFile = "/PROD/CONF/OTARIE/IT/load-it-traffic-cust-cell-otarie.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -653,7 +653,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_TRAFFIC_CUST_OTARIE",
-    cron = "30 */20 * * * ?",
+    cron = "30 15-59/20 * * * ?",
     configFile = "/PROD/CONF/OTARIE/IT/load-it-traffic-cust-otarie.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -667,7 +667,7 @@ crontasks +=
 
 // Archivage des données IN_ZTE + LOGS NIFI
 crontasks +=
-   {
+  {
     instanceId = "ARCH_ZTE",
     cron = "0 35 */3 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/arch-in-zte.conf",
